--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.ts",
-    "prettier": "prettier ./src/**/*.* --write"
+    "prettier": "prettier ./src/**/*.* --write",
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint src/**/*.ts --fix"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +16,19 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "nodemon": "^3.1.3",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2"
   }
 }
