--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "outDir": "./dist",
       "baseUrl": "./src",
       "moduleResolution": "node", 
-      "esModuleInterop": true 
+      "esModuleInterop": true,
     },
     "include": [
       "src/**/*.ts"
